# ece1724rust_project

./: .gitignore  Cargo.toml  Final_Report.md  Proposal.md  README.md  create_database.sql
src/: db.rs  main.rs  swagger.rs
src/models/: flight.rs  mod.rs  ticket.rs  user.rs
src/routes/: flight_route.rs  mod.rs  ticket_route.rs  user_route.rs
src/services/: flight_service.rs  mod.rs  ticket_service.rs  user_service.rs
src/utils/: error.rs  jwt.rs  mod.rs  swagger_doc.rs
tests/: flight_service_test.rs  test_utils.rs  throughput_test.rs  ticket_service_test.rs  user_service_test.rs  user_service_test_copy.rs
tests/common/: test_utils.rs
util/: create_database.sql  create_database_unit_test.sql  create_flight_script.py  setup_database.sql
