[package]
name = "airline_booking_system"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "mysql", "time", "chrono", "rust_decimal"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8.1"
bcrypt = "0.10"
dotenv = "0.15"
thiserror = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
rust_decimal = "1.32"
rocket_okapi = { version = "0.8.0", features = ["swagger"] }
schemars = "0.8.12"
okapi = { version = "0.7.0" }
indexmap = "1.9.1"